Fix horizontal scroll in filter (#616)
On Chrome, there was horizontal scroll because the population slider was
2px too wide due to not accounting for the filter border.

--- a/src/css/_filter.scss
+++ b/src/css/_filter.scss
@@ -6,14 +6,17 @@
 @use "theme/zindex";
 @use "header";
 
-$filter-width: 310px;
+$filter-total-width: 310px;
+$filter-inner-width: calc(
+  $filter-total-width - (borders.$border-thickness * 2)
+);
 
 .filter-popup {
   position: fixed;
   right: spacing.$map-controls-margin-x;
   top: calc(header.$header-height + spacing.$map-controls-margin-top);
   z-index: zindex.$filter-popup;
-  width: $filter-width;
+  width: $filter-total-width;
 
   max-height: min(600px, 75vh);
   overflow-y: auto;
